welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (hour<=20 && talking=true){
    return false
  } else  if (hour>=7 && talking==true) {
    return false
  } else {
    return true
  }
}